Properties to get database initialization

--- a/creacionDeNotas/src/main/resources/application.properties
+++ b/creacionDeNotas/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA Configuration
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
